catkin_ws/logs/backend/build.make.034.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:12:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/AsusProLiveOpenNI2.h:25:19: error: ‘Frame’ has not been declared
  static bool grab(Frame& frame);
                   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:22:38: error: ‘Frame’ has not been declared
 cv::Mat AsusProLiveOpenNI2::colorImg(Frame::rows,Frame::cols,CV_8UC3);
                                      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:22:50: error: ‘Frame’ has not been declared
 cv::Mat AsusProLiveOpenNI2::colorImg(Frame::rows,Frame::cols,CV_8UC3);
                                                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:23:38: error: ‘Frame’ has not been declared
 cv::Mat AsusProLiveOpenNI2::depthImg(Frame::rows,Frame::cols,CV_16UC1);
                                      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:23:50: error: ‘Frame’ has not been declared
 cv::Mat AsusProLiveOpenNI2::depthImg(Frame::rows,Frame::cols,CV_16UC1);
                                                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp: In static member function ‘static bool AsusProLiveOpenNI2::start()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:101:38: error: ‘Frame’ has not been declared
   rc = depth.setVideoMode(modesDepth[Frame::depthMode]);
                                      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:115:38: error: ‘Frame’ has not been declared
   rc = color.setVideoMode(modesColor[Frame::colorMode]);
                                      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp: In static member function ‘static void AsusProLiveOpenNI2::grabber()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:170:44: error: ‘Frame’ has not been declared
             memcpy( depthImg.data, pDepth, Frame::cols*Frame::rows*sizeof(uint16_t));
                                            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:170:56: error: ‘Frame’ has not been declared
             memcpy( depthImg.data, pDepth, Frame::cols*Frame::rows*sizeof(uint16_t));
                                                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:175:46: error: ‘Frame’ has not been declared
             memcpy( colorImg.data, pColor, 3*Frame::rows*Frame::cols*sizeof(uint8_t));
                                              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:175:58: error: ‘Frame’ has not been declared
             memcpy( colorImg.data, pColor, 3*Frame::rows*Frame::cols*sizeof(uint8_t));
                                                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp: At global scope:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:197:31: error: ‘bool AsusProLiveOpenNI2::grab’ is not a static member of ‘class AsusProLiveOpenNI2’
 bool AsusProLiveOpenNI2::grab(Frame& frame)
                               ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:197:31: error: ‘Frame’ was not declared in this scope
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:197:31: note: suggested alternative:
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/AsusProLiveOpenNI2.h:18:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:12:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:26:7: note:   ‘SLAM::Frame’
 class Frame
       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:197:38: error: ‘frame’ was not declared in this scope
 bool AsusProLiveOpenNI2::grab(Frame& frame)
                                      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/AsusProLiveOpenNI2.cpp:198:1: error: expected ‘,’ or ‘;’ before ‘{’ token
 {
 ^
make[2]: *** [CMakeFiles/frontend.dir/src/AsusProLiveOpenNI2.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
